development-runs/371/k8s/prod/api-gateway-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api-gateway
  namespace: microservices
  labels:
    io.kompose.service: api-gateway
spec:
  containers:
    - env:
        - name: LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_SECURITY
          value: TRACE
        - name: spring.cloud.config.uri
          value: http://config-server:8888/config-server
        - name: spring.profiles.active
          value: docker
      image: 0145136798/api-gateway
      name: api-gateway
      ports:
        - containerPort: 8080
          protocol: TCP
  restartPolicy: OnFailure
