development-runs/371/k8s/prod/notification-api-kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-api-kafka
  namespace: microservices
  labels:
    io.kompose.service: notification-api-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: notification-api-kafka
  template:
    metadata:
      labels:
        io.kompose.service: notification-api-kafka
    spec:
      containers:
        - env:
            - name: CLUSTER_ID
              value: MkU3OEVANTcwNTJENDM2Qk
            - name: KAFKA_ADVERTISED_LISTENERS
              value: PLAINTEXT://notification-api-kafka:29092,HOST://localhost:9092
            - name: KAFKA_CONTROLLER_LISTENER_NAMES
              value: CONTROLLER
            - name: KAFKA_CONTROLLER_QUORUM_VOTERS
              value: 1@notification-api-kafka:29093
            - name: KAFKA_LISTENERS
              value: PLAINTEXT://notification-api-kafka:29092,CONTROLLER://notification-api-kafka:29093,HOST://0.0.0.0:9092
            - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
              value: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,HOST:PLAINTEXT
            - name: KAFKA_NODE_ID
              value: "1"
            - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
              value: "1"
            - name: KAFKA_PROCESS_ROLES
              value: broker,controller
            - name: KAFKA_TRANSACTION_STATE_LOG_MIN_ISR
              value: "1"
            - name: KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR
              value: "1"
          image: confluentinc/cp-kafka:7.4.0
          name: notification-api-kafka
          ports:
            - containerPort: 9092
              protocol: TCP
      restartPolicy: Always
