development-runs/371/k8s/prod/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: microservices
  labels:
    io.kompose.service: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  template:
    metadata:
      labels:
        io.kompose.service: redis
    spec:
      containers:
        - image: redis:7.0.11
          name: redis
          ports:
            - containerPort: 6379
              protocol: TCP
      restartPolicy: Always
