development-runs/371/k8s/prod/transaction-api-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-api-postgres
  namespace: microservices
  labels:
    io.kompose.service: transaction-api-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: transaction-api-postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: transaction-api-postgres
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: postgres
            - name: POSTGRES_PASSWORD
              value: admin
            - name: POSTGRES_USER
              value: root
          image: postgres:15.2
          name: transaction-api-postgres
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /data/postgres
              name: transaction-api-postgres-claim0
      restartPolicy: Always
      volumes:
        - name: transaction-api-postgres-claim0
          persistentVolumeClaim:
            claimName: transaction-api-postgres-claim0
