development-runs/371/k8s/prod/zipkin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin
  namespace: microservices
  labels:
    io.kompose.service: zipkin
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: zipkin
  template:
    metadata:
      labels:
        io.kompose.service: zipkin
    spec:
      containers:
        - image: openzipkin/zipkin:2.24.0
          name: zipkin
          ports:
            - containerPort: 9411
              protocol: TCP
      restartPolicy: Always
