development-runs/371/k8s/prod/config-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-server
  namespace: microservices
  labels:
    io.kompose.service: config-server
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8888
      targetPort: 8888
  selector:
    io.kompose.service: config-server
