development-runs/371/k8s/prod/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: microservices
  labels:
    io.kompose.service: grafana
spec:
  type: ClusterIP
  ports:
    - name: ui
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: grafana
