development-runs/371/k8s/prod/notification-api-kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-api-kafka
  namespace: microservices
  labels:
    io.kompose.service: notification-api-kafka
spec:
  type: ClusterIP
  ports:
    - name: kafka
      port: 9092
      targetPort: 9092
  selector:
    io.kompose.service: notification-api-kafka
